--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="board"></div>
             <div class="menu"></div>
         </div>
+        <div class="footer">Copyright 2022 <a href="https://github.com/doctype-Melvin">doctype-Melvin</a></div>
     </div>
     <script src="script.js"></script>
 </body>
